Putting back Charlie's findbugs fixes.