@@ -69,42 +69,42 @@ public abstract class OutputStreamHook extends ObjectOutputStream
 	 * Put the value of the named boolean field into the persistent field.
 	 */
 	public void put(String name, boolean value){
-	    fields.put(name, new Boolean(value));
+	    fields.put(name, Boolean.valueOf(value));
 	}
 		
 	/**
 	 * Put the value of the named char field into the persistent fields.
 	 */
 	public void put(String name, char value){
-	    fields.put(name, new Character(value));
+	    fields.put(name, Character.valueOf(value));
 	}
 		
 	/**
 	 * Put the value of the named byte field into the persistent fields.
 	 */
 	public void put(String name, byte value){
-	    fields.put(name, new Byte(value));
+	    fields.put(name, Byte.valueOf(value));
 	}
 		
 	/**
 	 * Put the value of the named short field into the persistent fields.
 	 */
 	public void put(String name, short value){
-	    fields.put(name, new Short(value));
+	    fields.put(name, Short.valueOf(value));
 	}
 		
 	/**
 	 * Put the value of the named int field into the persistent fields.
 	 */
 	public void put(String name, int value){
-	    fields.put(name, new Integer(value));
+	    fields.put(name, Integer.valueOf(value));
 	}
 		
 	/**
 	 * Put the value of the named long field into the persistent fields.
 	 */
 	public void put(String name, long value){
-	    fields.put(name, new Long(value));
+	    fields.put(name, Long.valueOf(value));
 	}
 		
 	/**
@@ -112,14 +112,14 @@ public abstract class OutputStreamHook extends ObjectOutputStream
 	 *
 	 */
 	public void put(String name, float value){
-	    fields.put(name, new Float(value));
+	    fields.put(name, Float.valueOf(value));
 	}
 		
 	/**
 	 * Put the value of the named double field into the persistent field.
 	 */
 	public void put(String name, double value){
-	    fields.put(name, new Double(value));
+	    fields.put(name, Double.valueOf(value));
 	}
 		
 	/**
